--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     ],
     "require": {
     	"ammarfaizi2/ratools": "dev-master",
-    	"ammarfaizi2/teacrypt": "1.0"
+    	"ammarfaizi2/teacrypt": "1.0",
+    	"ammrafaizi2/facebook": "dev-master"
     }
 }
