--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,10 @@
     	"ammarfaizi2/ratools": "dev-master",
     	"ammarfaizi2/teacrypt": "1.0",
     	"ammrafaizi2/facebook": "dev-master"
+    },
+    "autoload":{
+    	"psr-4": {
+    		"System\\": "System/"
+    	}
     }
 }
