--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "require": {
     	"ammarfaizi2/ratools": "dev-master",
     	"ammarfaizi2/teacrypt": "1.0",
-    	"ammrafaizi2/facebook": "dev-master"
+    	"ammarfaizi2/facebook": "*"
     },
     "autoload":{
     	"psr-4": {
