--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,4 @@
 {
-    "name": "root/nfb",
     "authors": [
         {
             "name": "Ammar Faizi",
@@ -8,7 +7,7 @@
     ],
     "require": {
     	"ammarfaizi2/ratools": "dev-master",
-    	"ammarfaizi2/teacrypt": "1.0",
+    	"ammarfaizi2/teacrypt": "*",
     	"ammarfaizi2/facebook": "dev-master"
     },
     "autoload":{
